# doc_rocket

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_DEV.md  Makefile  README.md  agentscope_research_report.md  crewai_research_report.md  current_page.yml  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  langgraph_research_report.md  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  celery_app.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: agents.py  analyses.py  articles.py  drafts.py  external_references.py  insights.py  items.py  llm_model_configs.py  login.py  private.py  tools.py  (+11 more)
backend/app/core/: config.py  db.py  encryption.py  image.py  markdown.py  markdown_themes.py  qiniu_oss.py  redis_client.py  security.py  users.py  wechat_mp.py
backend/app/models/: __init__.py  agent_config.py  analysis.py  article.py  draft.py  external_reference.py  insight_snapshot.py  item.py  llm_model_config.py  publish_history.py  quality_rubric.py  skill.py  source.py  system_config.py  task_graph.py  task_run.py  token_usage.py  tool.py  transcript.py  user.py  workflow.py
backend/app/services/: __init__.py  insight_snapshot.py  style_matcher.py  token_usage.py
backend/app/tasks/: analyze.py  background.py  fetch.py  insight_snapshot.py  refine.py  rewrite.py  workflow.py
backend/scripts/: migrate_claude_provider.py  prestart.sh  seed-smoke-draft.py  seed_tools.py
backend/tests/: conftest.py
backend/tests/crud/: test_user.py
backend/tests/fixtures/: content.py  llm.py
backend/tests/integration/: conftest.py  test_sse.py  test_token_usage_api.py
backend/tests/models/: test_task_graph.py
backend/tests/scripts/: test_backend_pre_start.py  test_seed_tools.py  test_test_pre_start.py
backend/tests/tasks/: conftest.py  test_analyze_task.py  test_background.py  test_fetch_task.py  test_refine_task.py  test_rewrite_task.py  test_workflow_linear.py  test_workflow_task.py
backend/tests/unit/: test_base_agent_token_usage.py  test_encryption.py  test_llm_factory.py  test_llm_usage_extraction.py  test_task_run_model.py  test_token_usage_service.py
backend/tests/utils/: user.py  utils.py
(+241 files in other folders)
